--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@mui/material": "^5.15.0",
+    "@mui/x-data-grid": "^7.29.9",
+    "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "@mui/material": "^5.15.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2"
   }
 }
